
Enhancements:

- Charts of SQL results: Plain x-y-charts of pairs of numeric columns can now be created.
    Note: Charts make use of JFreeChart: http://www.jfree.org/jfreechart/)

- New right mouse menu entry in SQL results: "Show foreign key references".
   Select one or more cells of a SQL result then choose the right mouse menu to display the foreign references for the selected cells.

- SQL result --> Info tab: SQL is now displayed in text field instead of label. Formatting is preserved.

- Check boxes to enable / disable navigation from the SQL editor to the object tree by Ctrl+B and Ctrl + mouse click.
    See Menu File --> New Session Properties --> Tab SQL --> Section Jump to object tree
    This will fix bug #982

- Patch #66 New toolbar button to clone the current Session with a new connection.
    The button is right next to the new SQL tab button.
    Thanks to Jaroslaw Jarmolowicz for the patch

- Patch #67 Session tab tooltip now shows the connections JDBC-URL.
    Thanks to Jaroslaw Jarmolowicz for the patch

- Patch #68 The "Copy as INSERT / UPDATE statement" functions now provide the right table name
    when copying from a content tab.
    Thanks to Jaroslaw Jarmolowicz for the patch

Bug fixes:

- Fixed NullPointerException during Session start when no Hibernate dialect is available for the Session's database connection.

- Bug #1150 Exports to excel xls format not working in version 3.5.3

- DB2 Plugin / bug #1097 DB2: don't display UDF source : SQL0206N "SCHEMA" is not valid in the context where it is used.
   Thanks to Andy Helmer for the fix.

- Data import Plugin / bug #1133: Now imports new Excel format *.xlsx

- Patch #69 Postgres: Fixing problem with long running "getTypesInfo" on Postgres.
   Thanks to Jaroslaw Jarmolowicz for the patch

- Patch #70 Refactoring --> Dropping foreign key was generating wrong object names in SQL.
   Thanks to Jaroslaw Jarmolowicz for the patch
