@@ -53,59 +53,7 @@ import net.sourceforge.squirrel_sql.client.mainframe.action.TileVerticalAction;
 import net.sourceforge.squirrel_sql.client.mainframe.action.ViewHelpAction;
 import net.sourceforge.squirrel_sql.client.mainframe.action.ViewLogsAction;
 import net.sourceforge.squirrel_sql.client.session.ISession;
-import net.sourceforge.squirrel_sql.client.session.action.CloseAllSQLResultTabsAction;
-import net.sourceforge.squirrel_sql.client.session.action.CloseAllSQLResultTabsButCurrentAction;
-import net.sourceforge.squirrel_sql.client.session.action.CloseAllSQLResultWindowsAction;
-import net.sourceforge.squirrel_sql.client.session.action.CloseCurrentSQLResultTabAction;
-import net.sourceforge.squirrel_sql.client.session.action.CloseSessionAction;
-import net.sourceforge.squirrel_sql.client.session.action.CloseSessionWindowAction;
-import net.sourceforge.squirrel_sql.client.session.action.CommitAction;
-import net.sourceforge.squirrel_sql.client.session.action.CopyQualifiedObjectNameAction;
-import net.sourceforge.squirrel_sql.client.session.action.CopySimpleObjectNameAction;
-import net.sourceforge.squirrel_sql.client.session.action.DeleteSelectedTablesAction;
-import net.sourceforge.squirrel_sql.client.session.action.DumpSessionAction;
-import net.sourceforge.squirrel_sql.client.session.action.EditWhereColsAction;
-import net.sourceforge.squirrel_sql.client.session.action.ExecuteSqlAction;
-import net.sourceforge.squirrel_sql.client.session.action.FileAppendAction;
-import net.sourceforge.squirrel_sql.client.session.action.FileCloseAction;
-import net.sourceforge.squirrel_sql.client.session.action.FileDetachAction;
-import net.sourceforge.squirrel_sql.client.session.action.FileNewAction;
-import net.sourceforge.squirrel_sql.client.session.action.FileOpenAction;
-import net.sourceforge.squirrel_sql.client.session.action.FileOpenRecentAction;
-import net.sourceforge.squirrel_sql.client.session.action.FilePrintAction;
-import net.sourceforge.squirrel_sql.client.session.action.FileSaveAction;
-import net.sourceforge.squirrel_sql.client.session.action.FileSaveAsAction;
-import net.sourceforge.squirrel_sql.client.session.action.FilterObjectsAction;
-import net.sourceforge.squirrel_sql.client.session.action.FormatSQLAction;
-import net.sourceforge.squirrel_sql.client.session.action.GotoNextResultsTabAction;
-import net.sourceforge.squirrel_sql.client.session.action.GotoPreviousResultsTabAction;
-import net.sourceforge.squirrel_sql.client.session.action.IMainPanelTabAction;
-import net.sourceforge.squirrel_sql.client.session.action.IObjectTreeAction;
-import net.sourceforge.squirrel_sql.client.session.action.ISQLPanelAction;
-import net.sourceforge.squirrel_sql.client.session.action.ISessionAction;
-import net.sourceforge.squirrel_sql.client.session.action.NewAliasConnectionAction;
-import net.sourceforge.squirrel_sql.client.session.action.NewObjectTreeAction;
-import net.sourceforge.squirrel_sql.client.session.action.NewSQLWorksheetAction;
-import net.sourceforge.squirrel_sql.client.session.action.NextSessionAction;
-import net.sourceforge.squirrel_sql.client.session.action.NextSqlAction;
-import net.sourceforge.squirrel_sql.client.session.action.OpenSqlHistoryAction;
-import net.sourceforge.squirrel_sql.client.session.action.PreviousSessionAction;
-import net.sourceforge.squirrel_sql.client.session.action.PreviousSqlAction;
-import net.sourceforge.squirrel_sql.client.session.action.ReconnectAction;
-import net.sourceforge.squirrel_sql.client.session.action.RefreshObjectTreeItemAction;
-import net.sourceforge.squirrel_sql.client.session.action.RefreshSchemaInfoAction;
-import net.sourceforge.squirrel_sql.client.session.action.RenameSessionAction;
-import net.sourceforge.squirrel_sql.client.session.action.RerunCurrentSQLResultTabAction;
-import net.sourceforge.squirrel_sql.client.session.action.RollbackAction;
-import net.sourceforge.squirrel_sql.client.session.action.SQLFilterAction;
-import net.sourceforge.squirrel_sql.client.session.action.SelectSqlAction;
-import net.sourceforge.squirrel_sql.client.session.action.SessionPropertiesAction;
-import net.sourceforge.squirrel_sql.client.session.action.SetDefaultCatalogAction;
-import net.sourceforge.squirrel_sql.client.session.action.ShowNativeSQLAction;
-import net.sourceforge.squirrel_sql.client.session.action.ToggleAutoCommitAction;
-import net.sourceforge.squirrel_sql.client.session.action.ToggleCurrentSQLResultTabStickyAction;
-import net.sourceforge.squirrel_sql.client.session.action.ToolsPopupAction;
-import net.sourceforge.squirrel_sql.client.session.action.ViewObjectAtCursorInObjectTreeAction;
+import net.sourceforge.squirrel_sql.client.session.action.*;
 import net.sourceforge.squirrel_sql.fw.util.StringManager;
 import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
 import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
@@ -511,6 +459,7 @@ public class ActionCollection
 		add(new DisplayPluginSummaryAction(_app));
 		//add(new DropSelectedTablesAction(_app));
 		add(new DeleteSelectedTablesAction(_app));
+		add(new ShowTableReferencesAction(_app));
 		add(new DumpApplicationAction(_app));
         add(new SavePreferencesAction(_app));
 		add(new DumpSessionAction(_app));
