@@ -404,6 +404,10 @@ action.net.sourceforge.squirrel_sql.client.session.action.DeleteSelectedTablesAc
 action.net.sourceforge.squirrel_sql.client.session.action.DeleteSelectedTablesAction.name=Delete Records
 action.net.sourceforge.squirrel_sql.client.session.action.DeleteSelectedTablesAction.tooltip=Delete all records of the selected table(s)
 
+action.net.sourceforge.squirrel_sql.client.session.action.ShowTableReferencesAction.image=
+action.net.sourceforge.squirrel_sql.client.session.action.ShowTableReferencesAction.name=Show foreign key references ...
+action.net.sourceforge.squirrel_sql.client.session.action.ShowTableReferencesAction.tooltip=Show foreign key references
+
 action.net.sourceforge.squirrel_sql.client.session.action.FileNewAction.image=eclipse/newfile_wiz.gif
 action.net.sourceforge.squirrel_sql.client.session.action.FileNewAction.name=New file
 action.net.sourceforge.squirrel_sql.client.session.action.FileNewAction.tooltip=New file
@@ -835,6 +839,9 @@ menuitem.net.sourceforge.squirrel_sql.client.session.action.DropTableAction.mnem
 
 menuitem.net.sourceforge.squirrel_sql.client.session.action.DeleteSelectedTablesAction.accelerator=
 menuitem.net.sourceforge.squirrel_sql.client.session.action.DeleteSelectedTablesAction.mnemonic=
+
+menuitem.net.sourceforge.squirrel_sql.client.session.action.ShowTableReferencesAction.accelerator=
+menuitem.net.sourceforge.squirrel_sql.client.session.action.ShowTableReferencesAction.mnemonic=
 
 menuitem.net.sourceforge.squirrel_sql.client.session.action.DumpSessionAction.accelerator=
 menuitem.net.sourceforge.squirrel_sql.client.session.action.DumpSessionAction.mnemonic=D
